🔧 Make chatbot UI responsive for all screen sizes

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   <div id="chat-container">
     <div id="chat-box">
       <div id="chat">
-        <div class="message bot">👋 Welcome! I can answer questions related to our mentoring finance program. Try asking about eligibility, cost, benefits, or how to get started.</div>
+        <div class="message bot">👋 Welcome! I can answer questions related to our mentoring finance program. Try asking about eligibility, cost, benefits, or how to get started. You have only 10 Queries Per Day</div>
       </div>
       <div id="input-area">
         <input id="userInput" type="text" placeholder="Type your finance question..." />
